[project]
name = "comfyui-florence-2"
description = "[a/https://huggingface.co/microsoft/Florence-2-large-ft](https://huggingface.co/microsoft/Florence-2-large-ft)\nLarge or base model, support for captioning and bbox task modes, more coming soon."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/spacepxl/ComfyUI-Florence-2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Florence-2"
Icon = ""
